karnc/tests/fixtures/positive/128_http_and_call_same_service/src/api.karn
context api

service mixed {
  on call(name: String) -> Effect[Result[String, ()]] {
    Ok("called")
  }

  on http GET "/hello" () -> Effect[HttpResult[String]] {
    Ok("hello world")
  }
}
