karnc/tests/fixtures/negative/99_http_reserved_prefix/src/svc.karn
context svc

service api {
  on http GET "/_karn/foo" () -> Effect[HttpResult[String]] {
    Ok("nope")
  }
}
